# dialscript

./: CMakeLists.txt  Example  README  README.md
.github/workflows/: release.yml
compiler/: compiler.c  compiler.h  parser.c  verbose.c
main/: main.c  main.h
tests/: test.ds  test_error.ds  test_long.ds
